# file2felts

./: Cargo.toml  README.md  file.json  king.json  princess.json
cairoContract/: storage_felts.cairo
cairoContract/store_felts/: .gitignore  .tool-versions  Scarb.toml
cairoContract/store_felts/src/: lib.cairo
src/: bin_hex.rs  constants.rs  felts2file.rs  file2felts.rs  main.rs
typescriptDecode/: .gitignore  README.md  king.json  kingRead.json  package.json  tsconfig.json
typescriptDecode/cairo/: storage_felts.cairo  storage_felts.casm.json  storage_felts.sierra.json
typescriptDecode/src/: 0.encodeKing.ts  1.declareDeployContract.ts  2.CallInvokeContract.ts  3.decodeJson.ts  file2felt.ts  resetDevnetFunc.ts  types.ts
typescriptDecode/src/tmp/: abi065.json  abi077.json  bytecode077.txt
